refactor + docs